kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-deployment-service
spec:
  selector:
    app.kubernetes.io/name: test-deployment
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: http
