kubernetes/ingress.yaml
---
# Source: shopware-slim/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-deployment-ingress
  labels:
    name: test-deployment-ingress

  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/server-snippet: |-
      #
      server_tokens off;
      location /test-endpoint {
        return 200;
      }
    cert-manager.io/acme-challenge-type:  http01
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "test-cluster.az.ssys-e.com"
      secretName: "test-cluster-az-ssys-e-comm-tls"
  rules:
    - host: "test-cluster.az.ssys-e.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: test-deployment
                port:
                  name: http
